# pdsls

./: .env  .env.example  .pre-commit-config.yaml  CRITICAL_ASSESSMENT.md  FINAL_ASSESSMENT.md  LICENSE  README.md  UPDATED_ASSESSMENT.md  examples.md  justfile  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: docs.json  quickstart.mdx
docs/api-reference/: pdsx-_internal-__init__.mdx  pdsx-_internal-auth.mdx  pdsx-_internal-batch.mdx  pdsx-_internal-config.mdx  pdsx-_internal-display.mdx  pdsx-_internal-operations.mdx  pdsx-_internal-output.mdx  pdsx-_internal-parsing.mdx  pdsx-_internal-resolution.mdx  pdsx-_internal-types.mdx  pdsx-cli.mdx
docs/concepts/: addressing.mdx  blobs.mdx  pagination.mdx  records-and-collections.mdx  records.mdx  repositories.mdx
docs/guides/: batch-operations.mdx  blob-upload.mdx  configure-for-writes.mdx  crud-safety.mdx  paginating-large-collections.mdx  quickstart.mdx  read-repositories.mdx  uploading-blobs.mdx  uri-troubleshooting.mdx
docs/python-sdk/: pdsx-_internal-auth.mdx  pdsx-_internal-config.mdx  pdsx-_internal-display.mdx  pdsx-_internal-operations.mdx  pdsx-_internal-output.mdx  pdsx-_internal-parsing.mdx  pdsx-_internal-resolution.mdx  pdsx-cli.mdx
repros/: pagination_issues.md  review_summary.md
src/pdsls/: __init__.py  cli.py
src/pdsls/_internal/: __init__.py  auth.py  config.py  display.py  operations.py  output.py  types.py
src/pdsx/: __init__.py  cli.py
src/pdsx/_internal/: __init__.py  batch.py  config.py  display.py  operations.py  parsing.py  resolution.py  types.py
tests/: __init__.py  test_batch.py  test_cli.py  test_config.py  test_display.py  test_operations.py  test_parsing.py  test_types.py
