[project]
name = "pdsx"
dynamic = ["version"]
description = "general-purpose cli for atproto record operations"
readme = "README.md"
authors = [{ name = "zzstoatzz", email = "thrast36@gmail.com" }]
requires-python = ">=3.10"
license = "MIT"

keywords = ["atproto", "bluesky", "pds", "records", "cli"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "atproto>=0.0.63",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.3",
    "rich>=13.0.0",
]

[project.scripts]
pdsx = "pdsx.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-sugar",
    "ruff>=0.12.0",
    "prek>=0.2.0",
    "ty>=0.0.1a25",
    "mdxify>=0.2.34",
    "pytest-mock>=3.15.1",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true
fallback-version = "0.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::pydantic._internal._generate_schema.UnsupportedFieldAttributeWarning",
]

[tool.ruff.lint]
fixable = ["ALL"]
ignore = [
    "COM812",
    "PLR0913", # Too many arguments
    "SIM102",  # Dont require combining if statements
]
extend-select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "I",   # isort
    "PIE", # flake8-pie
    "RUF", # Ruff-specific
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I001"]
"tests/**/*.py" = ["S101"]       # Allow assert in tests

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "sandbox/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ty.src]
include = ["src", "tests"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".venv",
    ".git",
    "dist",
    "sandbox",
]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.rules]
unknown-argument = "ignore"
no-matching-overload = "ignore"
